--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Home
+title: About
 ---
 
 <div class="row-fluid">
   <div class="span8">
-    <h1>I'm the home page!</h1>
+    <h1>I'm the About</h1>
   </div>
 <div>
