--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ title: About
     <div class="row">
       <section class="project span6 box-shadow">
         <div class="logo">
-          <img src="/assets/img/transmogrifier.png"></img>
+          <img src="/assets/img/projects/pr2robot.png"></img>
         </div>
 
         <a href="http://pykalman.github.com">
@@ -21,54 +21,48 @@ title: About
 
         <p>
           Kalman Filters and their extensions are basic tools for tracking
-          robots. While the quintessential algorithm is only 5 equations
-          long, there are many extensions that more general and numerically
-          stable. This python library does all of that for you.
+          robots. While the standard Kalman Filter is quite simple, the flurry
+          of extensions offering better numerical stability and increased
+          applicability can be quite daunting. This library takes care of that
+          for you.
         </p>
       </section>
 
       <section class="project span6 box-shadow">
         <div class="logo">
-          <img src="/assets/img/transmogrifier.png"></img>
+          <img src="/assets/img/projects/vim.png"></img>
         </div>
 
-        <a href="http://????">
-          <h1>2nd project</h1>
+        <a href="https://github.com/duckworthd/vim-config">
+          <h1>Vim Config</h1>
         </a>
 
         <p>
-          blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
+          I use Vim. A lot. This config contains all of my settings (350
+          lines!) and addons I use every day.  Give it a try, you might be
+          surprised how much better Vim can be!
         </p>
       </section>
     </div>
+
     <div class="row">
       <section class="project span6 box-shadow">
         <div class="logo">
           <img src="/assets/img/transmogrifier.png"></img>
         </div>
 
-        <a href="http://????">
-          <h1>3rd PROJECT</h1>
+        <a href="http://github.com/duckworthd/transmogrifier">
+          <h1>Transmogrifier</h1>
         </a>
 
         <p>
-          blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+          Code used for generating this blog.  It ends up getting Jekyll to
+          play nice with $\LaTeX$ can be quite a pain -- fork this to get
+          yourself up and running without the hassle!
         </p>
       </section>
-      <section class="project span6 box-shadow">
-        <div class="logo">
-          <img src="/assets/img/transmogrifier.png"></img>
-        </div>
 
-        <a href="http://????">
-          <h1>4th Project</h1>
-        </a>
-
-        <p>
-          blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
-        </p>
       </section>
-    </div>
-  </div>
+    </div>  </div>
 <div>
 
