--- a/index.html
+++ b/index.html
@@ -1,10 +1,83 @@
 ---
 layout: default
-title: Transmogrifier
+title: About
 ---
 
 <div class="row-fluid">
-  <div class="span8">
-    <h1>I'm the home page!</h1>
+  <div class="span10 offset1 box-shadow">
+    <!-- main image -->
+    <!-- TODO stylize -->
+    <!-- TODO take picture -->
+    <div class="row-fluid">
+      <div class="hero-unit">
+        <h1>Hi.</h1>
+      </div>
+    </div>
+
+    <!-- personal message -->
+    <div class="message row-fluid">
+      <div class="span8 offset2">
+        <p>
+          My name is Daniel Duckworth, and I am a student at University of
+          Massachusetts, Amherst in the
+          <a href="http://iesl.cs.umass.edu/"> Information Extraction and
+            Synthesis Lab</a>.  My
+          current research revolves around
+          <a href="/blog/topic-models.html"> Topic Modeling</a>
+          , an area concerned with extracting "topics" out of large bodies of
+          text.  My academic interests however are far more broad, touching on
+          Linear Algebra, Probability Theory, Machine Learning, and Robotics.
+        </p>
+        <p>
+          I was born, raised, and educated in California, a land of hope and
+          opportunity. The
+          <a href="/assets/img/infinite-city.jpg" rel="lightbox" title="Infinite City"> Infinite City </a>
+          is where my heart still resides.
+        </p>
+      </div>
+    </div>
+
+    <!-- contact -->
+    <div class="contact-info row-fluid">
+      <div class="span6 offset3">
+        <!-- TODO get little icons for method -->
+        <!-- TODO style these -->
+        <div class="row-fluid">
+          <div class="method">
+            <div class="method-inner">
+              <img src="/assets/img/glyphicons/glyphicons_121_message_empty.png"></img>
+            </div>
+          </div>
+          <div class="destination"> duckworthd [at] gmail [dot] com </div>
+        </div>
+
+        <div class="row-fluid">
+          <div class="method">
+            <div class="method-inner">
+              <img src="/assets/img/glyphicons/glyphicons_169_phone.png"></img>
+            </div>
+          </div>
+          <div class="destination"> (831) 285-04 six eight </div>
+        </div>
+
+        <div class="row-fluid">
+          <div class="method">
+            <div class="method-inner">
+              <img src="/assets/img/glyphicons/glyphicons_411_twitter.png"></img>
+            </div>
+          </div>
+          <div class="destination"> <a href="http://twitter.com/duck"> @duck </a> </div>
+        </div>
+
+        <div class="row-fluid">
+          <div class="method">
+            <div class="method-inner">
+              <img src="/assets/img/glyphicons/glyphicons_397_linked_in.png"></img>
+            </div>
+          </div>
+          <div class="destination"> <a href="http://www.linkedin.com/in/dduckworth/"> dduckworth </a> </div>
+        </div>
+      </div>
+    </div>
   </div>
 <div>
